@@ -1,5 +1,12 @@
 Revision history for XML-Grammar-Fiction.
 
+    * Add t/style-trailing-space.t to check for trailing space.
+        - Got rid of trailing space.
+        - TODO: extract into a CPAN module.
+    * Convert from "use Moose;" to "use Mouse;":
+        - it made the test suite run faster.
+        - TODO: test with https://metacpan.org/module/Moo .
+
 0.8.1       Sat Jun  9 23:07:51 IDT 2012
     * Add t/base/line-iterator-unit.t to provide unit-tests for
         XML::Grammar::FictionBase::FromProto::Parser::LineIterator .
